code-execution/karel/example/result/result_3.txt
COMPILE_ERROR
src/Solution.java:44: error: cannot find symbol
                leftOrRight();
                ^
  symbol:   method leftOrRight()
  location: class Solution
src/Solution.java:48: error: cannot find symbol
                leftOrRight();
                ^
  symbol:   method leftOrRight()
  location: class Solution
2 errors
